--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,14 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<section class="page-404">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <a href="/">
+                    <img src="static/images/logo.png" alt="site logo" />
+                </a>
+                <h1>404</h1>
+                <h2>Page Not Found</h2>
+                <a href="/" class="btn btn-main"><i class="tf-ion-android-arrow-back"></i> Go Home</a>
+            </div>
+        </div>
+    </div>
+</section>
