--- a/public/css/home.css
+++ b/public/css/home.css
@@ -16,7 +16,7 @@
   width: 100%;
   position: relative;
   overflow: hidden;
-  background-image: url("../static/images/home/slider-5.jpg");
+  background-image: url("/static/images/home/slider-5.jpg");
   background-size: cover;
   background-attachment: fixed;
 }
