--- a/views/error.hbs
+++ b/views/error.hbs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-12">
                 <a href="/">
-                    <img src="static/images/logo.png" alt="site logo" />
+                    <img src="/static/images/logo.png" alt="site logo" />
                 </a>
                 <h1>404</h1>
                 <h2>Page Not Found</h2>
