--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,26 +18,26 @@
 	<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
 
 	<!-- Themefisher Icon font -->
-	<link rel="stylesheet" href="static/plugins/themefisher-font/style.css">
+	<link rel="stylesheet" href="/static/plugins/themefisher-font/style.css">
 	<!-- bootstrap.min css -->
-	<link rel="stylesheet" href="static/plugins/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.min.css">
 
 	<!-- animate.css -->
-	<link rel="stylesheet" href="static/plugins/animate-css/animate.css">
+	<link rel="stylesheet" href="/static/plugins/animate-css/animate.css">
 
 	<!-- Revolution Slider -->
 	<link rel="stylesheet" type="text/css"
-		href="static/plugins/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+		href="/static/plugins/revolution-slider/revolution/fonts/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
 	<link rel="stylesheet" type="text/css"
-		href="static/plugins/revolution-slider/revolution/fonts/font-awesome/css/font-awesome.css">
+		href="/static/plugins/revolution-slider/revolution/fonts/font-awesome/css/font-awesome.css">
 
 	<!-- REVOLUTION STYLE SHEETS -->
-	<link rel="stylesheet" type="text/css" href="static/plugins/revolution-slider/revolution/css/settings.css">
-	<link rel="stylesheet" type="text/css" href="static/plugins/revolution-slider/revolution/css/layers.css">
-	<link rel="stylesheet" type="text/css" href="static/plugins/revolution-slider/revolution/css/navigation.css">
+	<link rel="stylesheet" type="text/css" href="/static/plugins/revolution-slider/revolution/css/settings.css">
+	<link rel="stylesheet" type="text/css" href="/static/plugins/revolution-slider/revolution/css/layers.css">
+	<link rel="stylesheet" type="text/css" href="/static/plugins/revolution-slider/revolution/css/navigation.css">
 
 	<!-- Main Stylesheet -->
-	<link rel="stylesheet" href="static/css/style.css">
+	<link rel="stylesheet" href="/static/css/style.css">
 
 </head>
 
@@ -61,7 +61,7 @@
 					<div class="logo text-center">
 						<a href="/">
 							<!-- replace logo here -->
-							<img src="static/images/logo.png" alt="website main logo" />
+							<img src="/static/images/logo.png" alt="website main logo" />
 						</a>
 					</div>
 				</div>
@@ -108,7 +108,7 @@
 								<!-- Cart Item -->
 								<div class="media">
 									<a class="pull-left" href="#">
-										<img class="media-object" src="static/images/shop/cart-1.jpg" alt="image" />
+										<img class="media-object" src="/static/images/shop/cart-1.jpg" alt="image" />
 									</a>
 									<div class="media-body">
 										<h4 class="media-heading"><a href="">Mat kinh nam</a></h4>
@@ -123,7 +123,7 @@
 								<!-- Cart Item -->
 								<div class="media">
 									<a class="pull-left" href="#">
-										<img class="media-object" src="static/images/shop/cart-1.jpg" alt="image" />
+										<img class="media-object" src="/static/images/shop/cart-1.jpg" alt="image" />
 									</a>
 									<div class="media-body">
 										<h4 class="media-heading"><a href="">Mat kinh nam</a></h4>
@@ -227,7 +227,7 @@
 									<!-- Mega Menu -->
 									<div class="col-sm-3 col-xs-12">
 										<a href="shop.html">
-											<img class="img-responsive" src="static/images/shop/header-img.jpg"
+											<img class="img-responsive" src="/static/images/shop/header-img.jpg"
 												alt="menu image" />
 										</a>
 									</div>
@@ -282,7 +282,7 @@
 									<!-- Mega Menu -->
 									<div class="col-sm-3 col-xs-12">
 										<a href="shop.html">
-											<img class="img-responsive" src="static/images/shop/header-img.jpg"
+											<img class="img-responsive" src="/static/images/shop/header-img.jpg"
 												alt="menu image" />
 										</a>
 									</div>
@@ -336,7 +336,7 @@
 									<!-- Mega Menu -->
 									<div class="col-sm-3 col-xs-12">
 										<a href="shop.html">
-											<img class="img-responsive" src="static/images/shop/header-img.jpg"
+											<img class="img-responsive" src="/static/images/shop/header-img.jpg"
 												alt="menu image" />
 										</a>
 									</div>
@@ -446,42 +446,42 @@
 	<!-- Main jQuery -->
 	<script src="https://code.jquery.com/jquery-git.min.js"></script>
 	<!-- Bootstrap 3.1 -->
-	<script src="static/plugins/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
 	<!-- Bootstrap Touchpin -->
-	<script src="static/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js"></script>
+	<script src="/static/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js"></script>
 	<!-- Video Lightbox Plugin -->
-	<script src="static/plugins/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
+	<script src="/static/plugins/ekko-lightbox/dist/ekko-lightbox.min.js"></script>
 	<!-- Count Down Js -->
-	<script src="static/plugins/count-down/jquery.countdown.min.js"></script>
+	<script src="/static/plugins/count-down/jquery.countdown.min.js"></script>
 
 	<!-- Revolution Slider -->
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/jquery.themepunch.tools.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/jquery.themepunch.tools.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js"></script>
 
 	<!-- Revolution Slider -->
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"></script>
 	<script type="text/javascript"
-		src="static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"></script>
-	<script type="text/javascript" src="static/plugins/revolution-slider/assets/warning.js"></script>
+		src="/static/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"></script>
+	<script type="text/javascript" src="/static/plugins/revolution-slider/assets/warning.js"></script>
 
 
 
@@ -489,7 +489,7 @@
 	<script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBItRd4sQ_aXlQG_fvEzsxvuYyaWnJKETk&callback=initMap"></script>
 
-	<script src="static/js/script.js"></script>
+	<script src="/static/js/script.js"></script>
 
 
 
