routed and added cart page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,7 +15,7 @@
 					<!-- LAYERS -->
 
 					<!-- LAYER NR. 1 -->
-					<a href="shop.html" class="tp-caption rev-btn  tp-resizeme" data-x="['left','left','left','left']"
+					<a href="/product/list" class="tp-caption rev-btn  tp-resizeme" data-x="['left','left','left','left']"
 						data-hoffset="['170','120','70','40']" data-y="['middle','middle','middle','middle']"
 						data-voffset="['150','150','150','110']" data-width="150px" data-height="50px"
 						data-whitespace="normal" data-type="button" data-responsive_offset="on"
@@ -62,7 +62,7 @@
 
 
 					<!-- LAYER NR. 6 -->
-					<a href="shop.html" class="tp-caption rev-btn  tp-resizeme" data-x="['left','left','left','left']"
+					<a href="/product/list" class="tp-caption rev-btn  tp-resizeme" data-x="['left','left','left','left']"
 						data-hoffset="['880','760','600','330']" data-y="['middle','middle','middle','middle']"
 						data-voffset="['120','250','150','110']" data-width="150px" data-height="50px"
 						data-whitespace="normal" data-type="button" data-responsive_offset="on"
@@ -166,7 +166,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="category-box">
-					<a href="product/list">
+					<a href="/product/list">
 						<img src="/static/images/shop/category/category-1.jpg" alt="" />
 						<div class="content">
 							<h3>Do Nam</h3>
@@ -175,7 +175,7 @@
 					</a>
 				</div>
 				<div class="category-box">
-					<a href="product/list">
+					<a href="/product/list">
 						<img src="/static/images/shop/category/category-2.jpg" alt="" />
 						<div class="content">
 							<h3>Do Nu</h3>
@@ -186,7 +186,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="category-box category-box-2">
-					<a href="product/list">
+					<a href="/product/list">
 						<img src="/static/images/shop/category/category-3.jpg" alt="" />
 						<div class="content">
 							<h3>Phu Kien</h3>
