--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -4,8 +4,8 @@
         <div class="row">
             <div class="col-md-6">
                 <ol class="breadcrumb">
-                    <li><a href="#">Trang chu</a></li>
-                    <li><a href="#">Danh muc san pham</a></li>
+                    <li><a href="/">Trang chu</a></li>
+                    <li><a href="/product/list">Danh muc san pham</a></li>
                     <li class="active">{{product_name}}</li>
                 </ol>
             </div>
