--- a/views/product/list.hbs
+++ b/views/product/list.hbs
@@ -29,9 +29,9 @@
                                 aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <ul>
-                                        <li><a href="">Brand & Twist</a></li>
-                                        <li><a href="">Shoe Color</a></li>
-                                        <li><a href="">Shoe Color</a></li>
+                                        <li><a href="#">Brand & Twist</a></li>
+                                        <li><a href="#">Shoe Color</a></li>
+                                        <li><a href="#">Shoe Color</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -49,9 +49,9 @@
                                 aria-labelledby="headingTwo">
                                 <div class="panel-body">
                                     <ul>
-                                        <li><a href="">Brand & Twist</a></li>
-                                        <li><a href="">Shoe Color</a></li>
-                                        <li><a href="">Shoe Color</a></li>
+                                        <li><a href="#">Brand & Twist</a></li>
+                                        <li><a href="#">Shoe Color</a></li>
+                                        <li><a href="#">Shoe Color</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -69,10 +69,10 @@
                                 aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <ul>
-                                        <li><a href="">Brand & Twist</a></li>
-                                        <li><a href="">Shoe Color</a></li>
-                                        <li><a href="">Gladian Shoes</a></li>
-                                        <li><a href="">Swis Shoes</a></li>
+                                        <li><a href="#">Brand & Twist</a></li>
+                                        <li><a href="#">Shoe Color</a></li>
+                                        <li><a href="#">Gladian Shoes</a></li>
+                                        <li><a href="#">Swis Shoes</a></li>
                                     </ul>
                                 </div>
                             </div>
