--- a/views/partials/product_list.hbs
+++ b/views/partials/product_list.hbs
@@ -20,7 +20,7 @@
 							<a href="#"><i class="tf-ion-ios-heart"></i></a>
 						</li>
 						<li>
-							<a href=""><i class="tf-ion-android-cart"></i></a>
+							<a href="#"><i class="tf-ion-android-cart"></i></a>
 						</li>
 					</ul>
 				</div>
