Vietsub index.hbs
Fix vietnamese index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -161,7 +161,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="title text-center">
-					<h2>Danh Muc</h2>
+					<h2>Danh mục</h2>
 				</div>
 			</div>
 			<div class="col-md-6">
@@ -169,8 +169,8 @@
 					<a href="/product/list">
 						<img src="/static/images/shop/category/category-1.jpg" alt="" />
 						<div class="content">
-							<h3>Do Nam</h3>
-							<p>Xem danh sach cac san pham</p>
+							<h3>Đồ nam</h3>
+							<p>Xem danh sách các sản phẩm</p>
 						</div>
 					</a>
 				</div>
@@ -178,8 +178,8 @@
 					<a href="/product/list">
 						<img src="/static/images/shop/category/category-2.jpg" alt="" />
 						<div class="content">
-							<h3>Do Nu</h3>
-							<p>Xem danh sach cac san pham</p>
+							<h3>Đồ nữ</h3>
+							<p>Xem danh sách các sản phẩm</p>
 						</div>
 					</a>
 				</div>
@@ -189,8 +189,8 @@
 					<a href="/product/list">
 						<img src="/static/images/shop/category/category-3.jpg" alt="" />
 						<div class="content">
-							<h3>Phu Kien</h3>
-							<p>Xem danh sach cac san pham</p>
+							<h3>Phụ kiện</h3>
+							<p>Xem danh sách các sản phẩm</p>
 						</div>
 					</a>
 				</div>
@@ -203,7 +203,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="title text-center">
-				<h2>San pham hot</h2>
+				<h2>Sản phẩm hot</h2>
 			</div>
 		</div>
 
@@ -219,7 +219,7 @@ Start Call To Action
 		<div class="row">
 			<div class="col-md-12 text-center">
 				<div class="title">
-					<h2>SUBSCRIBE TO NEWSLETTER</h2>
+					<h2>Đăng kí nhận ưu đãi</h2>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, <br> facilis numquam impedit ut
 						sequi. Minus facilis vitae excepturi sit laboriosam.</p>
 				</div>
@@ -227,7 +227,7 @@ Start Call To Action
 					<div class="input-group subscription-form">
 						<input type="text" class="form-control" placeholder="Enter Your Email Address">
 						<span class="input-group-btn">
-							<button class="btn btn-main" type="button">Subscribe Now!</button>
+							<button class="btn btn-main" type="button">Đăng kí !</button>
 						</span>
 					</div><!-- /input-group -->
 				</div><!-- /.col-lg-6 -->
