--- a/views/dashboard/address.hbs
+++ b/views/dashboard/address.hbs
@@ -3,20 +3,20 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a href="/dashboard/history">Lich su mua hang</a></li>
-                    <li><a class="active" href="/dashboard/address">Dia chi giao hang</a></li>
-                    <li><a href="/dashboard/profile">Thong tin ca nhan</a></li>
+                    <li><a href="/dashboard/history">Lịch sử mua hàng</a></li>
+                    <li><a class="active" href="/dashboard/address">Địa chỉ giao hàng</a></li>
+                    <li><a href="/dashboard/profile">Thông tin cá nhân</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Company</th>
-                                    <th>Name</th>
-                                    <th>Address</th>
-                                    <th>Country</th>
-                                    <th class="col-md-2 col-sm-3">Phone</th>
+                                    <th>Công ty</th>
+                                    <th>Họ tên</th>
+                                    <th>Địa chỉ</th>
+                                    <th>Quốc gia</th>
+                                    <th class="col-md-2 col-sm-3">Điện thoại</th>
                                     <th></th>
                                 </tr>
                             </thead>
