--- a/views/dashboard/profile.hbs
+++ b/views/dashboard/profile.hbs
@@ -3,34 +3,34 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a href="/dashboard/history">Lich su mua hang</a></li>
-                    <li><a href="/dashboard/address">Dia chi giao hang</a></li>
-                    <li><a class="active" href="/dashboard/profile">Thong tin ca nhan</a></li>
+                    <li><a href="/dashboard/history">Lịch sử mua hàng</a></li>
+                    <li><a href="/dashboard/address">Địa chỉ giao hàng</a></li>
+                    <li><a class="active" href="/dashboard/profile">Thông tin cá nhân</a></li>
                 </ul>
                 <div class="dashboard-wrapper dashboard-user-profile">
                     <div class="media">
                         <div class="pull-left text-center" href="#">
                             <img class="media-object user-img" src="/static/images/avater.jpg" alt="Image">
-                            <a href="#x" class="btn btn-transparent mt-20">Thay doi anh dai dien</a>
+                            <a href="#x" class="btn btn-transparent mt-20">Thay đổi ảnh đại diện</a>
                         </div>
                         <div class="media-body">
                             <form class="checkout-form">
                                 <div class="form-group">
-                                    <label for="full_name">Ho va ten</label>
+                                    <label for="full_name">Họ và tên</label>
                                     <input type="text" class="form-control" id="full_name" placeholder=""
-                                        value="Doan Nguyen Tan Phuc">
+                                        value="Đoàn Nguyễn Tấn Phúc">
                                 </div>
                                 <div class="form-group">
-                                    <label for="user_address">Dia chi</label>
+                                    <label for="user_address">Địa chỉ</label>
                                     <input type="text" class="form-control" id="user_address" placeholder=""
                                         value="227 Đường Nguyễn Văn Cừ, Phường 4, Quận 5, Hồ Chí Minh">
                                 </div>
                                 <div class="form-group">
-                                    <label for="phone_number">So dien thoai</label>
+                                    <label for="phone_number">Số điện thoại</label>
                                     <input type="tel" class="form-control" id="phone_number" placeholder=""
                                         value="0949645703">
                                 </div>
-                             <a href="#" class="btn btn-main mt-20">Luu sua doi</a>
+                             <a href="#" class="btn btn-main mt-20">Lưu và sửa đổi</a>
                             </form>
                         </div>
                     </div>
