--- a/views/dashboard/history.hbs
+++ b/views/dashboard/history.hbs
@@ -3,20 +3,20 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="list-inline dashboard-menu text-center">
-                    <li><a class="active" href="/dashboard/history">Lich su mua hang</a></li>
-                    <li><a href="/dashboard/address">Dia chi giao hang</a></li>
-                    <li><a href="/dashboard/profile">Thong tin ca nhan</a></li>
+                    <li><a class="active" href="/dashboard/history">Lịch sử mua hàng</a></li>
+                    <li><a href="/dashboard/address">Địa chỉ giao hàng</a></li>
+                    <li><a href="/dashboard/profile">Thông tin cá nhân</a></li>
                 </ul>
                 <div class="dashboard-wrapper user-dashboard">
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Ma don hang</th>
-                                    <th>Thoi gian</th>
-                                    <th>So luong</th>
-                                    <th>Thanh tien</th>
-                                    <th>Trang thai</th>
+                                    <th>Mã đơn hàng</th>
+                                    <th>Thời gian</th>
+                                    <th>Số lượng</th>
+                                    <th>Thành tiền</th>
+                                    <th>Trạng thái</th>
                                     <th></th>
                                 </tr>
                             </thead>
