--- a/views/checkout/payment.hbs
+++ b/views/checkout/payment.hbs
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="content">
-                    <h1 class="page-name">Thanh toan</h1>
+                    <h1 class="page-name">Thanh toán</h1>
                     <ol class="breadcrumb">
-                        <li><a href="/">Trang chu</a></li>
-                        <li class="active">Thanh toan</li>
+                        <li><a href="/">Trang chủ</a></li>
+                        <li class="active">Thanh toán</li>
                     </ol>
                 </div>
             </div>
@@ -19,46 +19,46 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="block billing-details">
-                        <h4 class="widget-title">Chi tiet hoa don</h4>
+                        <h4 class="widget-title">Chi tiết hóa đơn</h4>
                         <form class="checkout-form">
                             <div class="form-group">
-                                <label for="full_name">Ho va ten</label>
+                                <label for="full_name">Họ và tên</label>
                                 <input type="text" class="form-control" id="full_name" placeholder="">
                             </div>
                             <div class="form-group">
-                                <label for="user_address">Dia chi</label>
+                                <label for="user_address">Địa chỉ</label>
                                 <input type="text" class="form-control" id="user_address" placeholder="">
                             </div>
                             <div class="form-group">
-                                <label for="phone_number">So dien thoai</label>
+                                <label for="phone_number">Số điện thoại</label>
                                 <input type="number" class="form-control" id="phone_number" placeholder="">
                             </div>
                         </form>
                     </div>
                     <div class="block">
-                        <h4 class="widget-title">Phuong thuc thanh toan</h4>
-                        <p>Thanh toan bang the tin dung</p>
+                        <h4 class="widget-title">Phương thức thanh toán</h4>
+                        <p>Thanh toán bằng thẻ tín dụng</p>
                         <div class="checkout-product-details">
                             <div class="payment">
                                 <div class="card-details">
                                     <form class="checkout-form">
                                         <div class="form-group">
-                                            <label for="card-number">Card Number <span class="required">*</span></label>
+                                            <label for="card-number">Số thẻ <span class="required">*</span></label>
                                             <input id="card-number" class="form-control" type="tel"
                                                 placeholder="•••• •••• •••• ••••">
                                         </div>
                                         <div class="form-group half-width padding-right">
-                                            <label for="card-expiry">Expiry (MM/YY) <span
+                                            <label for="card-expiry">Hết hạn (MM/YY) <span
                                                     class="required">*</span></label>
                                             <input id="card-expiry" class="form-control" type="tel"
                                                 placeholder="MM / YY">
                                         </div>
                                         <div class="form-group half-width padding-left">
-                                            <label for="card-cvc">Card Code <span class="required">*</span></label>
+                                            <label for="card-cvc">Mã thẻ <span class="required">*</span></label>
                                             <input id="card-cvc" class="form-control" type="tel" maxlength="4"
                                                 placeholder="CVC">
                                         </div>
-                                        <a href="#" class="btn btn-main mt-20">Xac nhan dat hang</a>
+                                        <a href="#" class="btn btn-main mt-20">Xác nhận đặt hàng</a>
                                     </form>
                                 </div>
                             </div>
@@ -68,34 +68,34 @@
                 <div class="col-md-4">
                     <div class="product-checkout-details">
                         <div class="block">
-                            <h4 class="widget-title">Thong tin don hang</h4>
+                            <h4 class="widget-title">Thông tin đơn hàng</h4>
                             <div class="media product-card">
                                 <a class="pull-left" href="/product/detail">
                                     <img class="media-object" src="/static/images/shop/cart-1.jpg" alt="Image" />
                                 </a>
                                 <div class="media-body">
-                                    <h4 class="media-heading"><a href="/product/detail">Kinh nam</a>
+                                    <h4 class="media-heading"><a href="/product/detail">Kính nam</a>
                                     </h4>
-                                    <p class="price">1 x 200000 dong</p>
-                                    <span class="remove">Xoa</span>
+                                    <p class="price">1 x 200000 đồng</p>
+                                    <span class="remove">Xóa</span>
                                 </div>
                             </div>
                             <div class="discount-code">
-                                <p>Co ma giam gia ? <a data-toggle="modal" data-target="#coupon-modal" href=""> Nhap vao day</a></p>
+                                <p>Có mã giảm giá ? <a data-toggle="modal" data-target="#coupon-modal" href=""> Nhap vao day</a></p>
                             </div>
                             <ul class="summary-prices">
                                 <li>
-                                    <span>Tong cong:</span>
-                                    <span class="price">1950000 dong</span>
+                                    <span>Tổng cộng:</span>
+                                    <span class="price">1950000 đồng</span>
                                 </li>
                                 <li>
-                                    <span>Phi giao hang:</span>
-                                    <span>Mien phi</span>
+                                    <span>Phí giao hàng:</span>
+                                    <span>Miễn phí</span>
                                 </li>
                             </ul>
                             <div class="summary-total">
-                                <span>Thanh tien</span>
-                                <span>195000 dong</span>
+                                <span>Thành tiền</span>
+                                <span>195000 đồng</span>
                             </div>
                             <div class="verified-icon">
                                 <img src="/static/images/shop/verified.png">
