--- a/views/checkout/cart.hbs
+++ b/views/checkout/cart.hbs
@@ -4,10 +4,10 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="content">
-					<h1 class="page-name">Gio hang</h1>
+					<h1 class="page-name">Giỏ hàng</h1>
 					<ol class="breadcrumb">
-						<li><a href="/">Trang chu</a></li>
-						<li class="active">Gio hang</li>
+						<li><a href="/">Trang chủ</a></li>
+						<li class="active">Giỏ hàng</li>
 					</ol>
 				</div>
 			</div>
@@ -28,8 +28,8 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th class="">Ten san pham</th>
-                      <th class="">Gia</th>
+                      <th class="">Tên sản phẩm</th>
+                      <th class="">Giá</th>
                       <th class=""></th>
                     </tr>
                   </thead>
@@ -38,36 +38,36 @@
                       <td class="">
                         <div class="product-info">
                           <img width="80" src="/static/images/shop/cart-1.jpg" alt="" />
-                          <a href="">Kinh nam</a>
+                          <a href="">Kính nam</a>
                         </div>
                       </td>
-                      <td class="">200000 dong</td>
+                      <td class="">200000 đồng</td>
                       <td class="">
-                        <a class="product-remove" href="">Xoa</a>
+                        <a class="product-remove" href="">Xóa</a>
                       </td>
                     </tr>
                     <tr class="">
                       <td class="">
                         <div class="product-info">
                           <img width="80" src="/static/images/shop/cart-1.jpg" alt="" />
-                          <a href="">Kinh nam</a>
+                          <a href="">Kính nam</a>
                         </div>
                       </td>
-                      <td class="">200000 dong</td>
+                      <td class="">200000 đồng</td>
                       <td class="">
-                        <a class="product-remove" href="">Xoa</a>
+                        <a class="product-remove" href="">Xóa</a>
                       </td>
                     </tr>
                     <tr class="">
                       <td class="">
                         <div class="product-info">
                           <img width="80" src="/static/images/shop/cart-1.jpg" alt="" />
-                          <a href="">Kinh nam</a>
+                          <a href="">Kính nam</a>
                         </div>
                       </td>
-                      <td class="">200000 dong</td>
+                      <td class="">200000 đồng</td>
                       <td class="">
-                        <a class="product-remove" href="">Xoa</a>
+                        <a class="product-remove" href="">Xóa</a>
                       </td>
                     </tr>
                   </tbody>
