Fix partials and products
Fix vietnamese

--- a/views/partials/modal.hbs
+++ b/views/partials/modal.hbs
@@ -19,8 +19,8 @@
 	        				<p class="product-short-description">
 	        					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem iusto nihil cum. Illo laborum numquam rem aut officia dicta cumque.
 	        				</p>
-	        				<a href="/checkout/cart" class="btn btn-main">Them vao gio</a>
-	        				<a href="/product/detail" class="btn btn-transparent">Chi tiet</a>
+	        				<a href="/checkout/cart" class="btn btn-main">Thêm</a>
+	        				<a href="/product/detail" class="btn btn-transparent">Chi tiết</a>
 	        			</div>
 	        		</div>
 	        	</div>
