--- a/views/product/list.hbs
+++ b/views/product/list.hbs
@@ -3,25 +3,25 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="widget">
-                    <h4 class="widget-title">Short By</h4>
+                    <h4 class="widget-title">Sắp xếp theo</h4>
                     <form method="post" action="#">
                         <select class="form-control">
-                            <option>Man</option>
-                            <option>Women</option>
-                            <option>Accessories</option>
-                            <option>Shoes</option>
+                            <option>Đồ nam</option>
+                            <option>Đồ nữ</option>
+                            <option>Phụ kiện</option>
+                            <option>Giày</option>
                         </select>
                     </form>
                 </div>
                 <div class="widget product-category">
-                    <h4 class="widget-title">Categories</h4>
+                    <h4 class="widget-title">Danh mục</h4>
                     <div class="panel-group commonAccordion" id="accordion" role="tablist" aria-multiselectable="true">
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <h4 class="panel-title">
                                     <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                                         aria-expanded="true" aria-controls="collapseOne">
-                                        Shoes
+                                        Giày
                                     </a>
                                 </h4>
                             </div>
@@ -29,9 +29,9 @@
                                 aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <ul>
-                                        <li><a href="#">Brand & Twist</a></li>
-                                        <li><a href="#">Shoe Color</a></li>
-                                        <li><a href="#">Shoe Color</a></li>
+                                        <li><a href="#">Giày cao gót</a></li>
+                                        <li><a href="#">Giày thể thao</a></li>
+                                        <li><a href="#">Giày tây</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -41,7 +41,7 @@
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                         href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        Duty Wear
+                                        Quần áo
                                     </a>
                                 </h4>
                             </div>
@@ -61,7 +61,7 @@
                                 <h4 class="panel-title">
                                     <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                         href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        WorkOut Shoes
+                                        Phụ kiện
                                     </a>
                                 </h4>
                             </div>
