--- a/views/partials/product_list.hbs
+++ b/views/partials/product_list.hbs
@@ -27,7 +27,7 @@
 			</div>
 			<div class="product-content">
 				<h4><a href="/product/detail">{{this.name}}</a></h4>
-				<p class="price">{{this.price}} dong</p>
+				<p class="price">{{this.price}} đồng</p>
 			</div>
 		</div>
 	</div>
@@ -35,5 +35,5 @@
 
 </div>
 {{else}}
-	<h2>Khong co mon nao hang nao</h2>
+	<h2>Không có món hàng nào</h2>
 {{/if}}
