--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -4,15 +4,15 @@
         <div class="row">
             <div class="col-md-6">
                 <ol class="breadcrumb">
-                    <li><a href="/">Trang chu</a></li>
-                    <li><a href="/product/list">Danh muc san pham</a></li>
+                    <li><a href="/">Trang chủ</a></li>
+                    <li><a href="/product/list">Danh mục sản phẩm</a></li>
                     <li class="active">{{product_name}}</li>
                 </ol>
             </div>
             <div class="col-md-6">
                 <ol class="product-pagination text-right">
-                    <li><a href="#"><i class="tf-ion-ios-arrow-left"></i> Tiep theo </a></li>
-                    <li><a href="#">Quay lai <i class="tf-ion-ios-arrow-right"></i></a></li>
+                    <li><a href="#"><i class="tf-ion-ios-arrow-left"></i> Tiếp theo </a></li>
+                    <li><a href="#">Quay lại <i class="tf-ion-ios-arrow-right"></i></a></li>
                 </ol>
             </div>
         </div>
@@ -68,11 +68,11 @@
             <div class="col-md-7">
                 <div class="single-product-details">
                     <h2>{{product_name}}</h2>
-                    <p class="product-price mb-20">{{product_price}} dong</p>
+                    <p class="product-price mb-20">{{product_price}} đồng</p>
 
                     {{{product_description}}}
                     <div class="color-swatches">
-                        <span>Color:</span>
+                        <span>Màu:</span>
                         <ul>
                             <li>
                                 <a href="#" class="swatch-violet"></a>
@@ -86,7 +86,7 @@
                         </ul>
                     </div>
                     <div class="product-size">
-                        <span>Size:</span>
+                        <span>Kích cỡ:</span>
                         <select class="form-control">
                             <option>S</option>
                             <option>M</option>
@@ -95,19 +95,19 @@
                         </select>
                     </div>
                     <div class="product-quantity">
-                        <span>So luong:</span>
+                        <span>Số lượng:</span>
                         <div class="product-quantity-slider">
                             <input id="product-quantity" type="text" value="0" name="product-quantity">
                         </div>
                     </div>
                     <div class="product-category">
-                        <span>Danh muc:</span>
+                        <span>Danh mục:</span>
                         <ul>
-                            <li><a href="#">Dam</a></li>
-                            <li><a href="#">Nu</a></li>
+                            <li><a href="#">Đầm</a></li>
+                            <li><a href="#">Nữ</a></li>
                         </ul>
                     </div>
-                    <a href="/checkout/cart" class="btn btn-main mt-20">Them vao gio</a>
+                    <a href="/checkout/cart" class="btn btn-main mt-20">Thêm vào giỏ</a>
                 </div>
             </div>
 
@@ -118,12 +118,12 @@
             <div class="col-xs-12">
                 <div class="tabCommon mt-20">
                     <ul class="nav nav-tabs">
-                        <li class="active"><a data-toggle="tab" href="#details" aria-expanded="true">Chi tiet</a></li>
-                        <li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Danh gia (3)</a></li>
+                        <li class="active"><a data-toggle="tab" href="#details" aria-expanded="true">Chi tiết</a></li>
+                        <li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Đánh giá (3)</a></li>
                     </ul>
                     <div class="tab-content patternbg">
                         <div id="details" class="tab-pane fade active in">
-                            <h4>Mo ta san pham</h4>
+                            <h4>Mô tả sản phẩm</h4>
                             {{{product_description}}}
                         </div>
                         <div id="reviews" class="tab-pane fade">
