--- a/views/user/forget-password.hbs
+++ b/views/user/forget-password.hbs
@@ -4,17 +4,17 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
-          <h2 class="text-center">Chao mung ban tro lai</h2>
+          <h2 class="text-center">Chào mừng bạn trở lại</h2>
           <form class="text-left clearfix">
-            <p>Hay nhap email tai khoan cua ban. Ban se nhan duoc ma xac thuc de tao mat khau moi.</p>
+            <p>Hãy nhập tài khoản email của bạn để chúng tôi hỗ trợ bạn lấy lại tài khoản.</p>
             <div class="form-group">
               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-main text-center">Lam moi mat khau</button>
+              <button type="submit" class="btn btn-main text-center">Làm mới mật khẩu</button>
             </div>
           </form>
-          <p class="mt-20"><a href="/user/login"><u>Tro ve dang nhap</u></a></p>
+          <p class="mt-20"><a href="/user/login"><u>Trở về đăng nhập</u></a></p>
         </div>
       </div>
     </div>
