--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -4,20 +4,20 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
-          <h2 class="text-center">Chao Mung Ban Tro Lai</h2>
+          <h2 class="text-center">Chào mừng bạn trở lại</h2>
           <form class="text-left clearfix" action="#" >
             <div class="form-group">
               <input type="email" class="form-control"  placeholder="Email">
             </div>
             <div class="form-group">
-              <input type="password" class="form-control" placeholder="Mat khau">
+              <input type="password" class="form-control" placeholder="Mật khẩu">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-main text-center" >Dang nhap</button>
+              <button type="submit" class="btn btn-main text-center" >Đăng nhập</button>
             </div>
           </form>
-          <p class="mt-20">Chua co tai khoan ?<a href="/user/register"> <u>Tao tai khoan moi</u></a></p>
-          <p><a href="/user/forget-password"> <u>Quen mat khau</u></a></p>
+          <p class="mt-20">Chưa có tài khoản ?<a href="/user/register"> <u>Tạo tài khoản mới</u></a></p>
+          <p><a href="/user/forget-password"> <u>Quên mật khẩu</u></a></p>
         </div>
       </div>
     </div>
