--- a/views/user/register.hbs
+++ b/views/user/register.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <div class="block text-center">
-          <h2 class="text-center">Tao tai khoan</h2>
+          <h2 class="text-center">Tạo tài khoản</h2>
           <form class="text-left clearfix" action="#">
             <div class="form-group">
               <input type="text" class="form-control"  placeholder="Ho">
@@ -21,11 +21,11 @@
               <input type="password" class="form-control"  placeholder="Mat khau">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-main text-center">Dang ky</button>
+              <button type="submit" class="btn btn-main text-center">Đăng kí</button>
             </div>
           </form>
-          <p class="mt-20">Da co tai khoan ?<a href="/user/login"> <u>Dang nhap</u></a></p>
-          <p><a href="/user/forget-password"> <u>Quen mat khau</u></a></p>
+          <p class="mt-20">Đã có tài khoản ?<a href="/user/login"> <u>Đăng nhập</u></a></p>
+          <p><a href="/user/forget-password"> <u>Quên mật khẩu</u></a></p>
         </div>
       </div>
     </div>
