--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -293,7 +293,7 @@
 <!-- Pages -->
 						<li class="dropdown full-width dropdown-slide">
 							<a href="/product/list" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown"
-								data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Phu Kien <span
+								data-delay="350" role="button" aria-haspopup="true" aria-expanded="false">Phụ kiện <span
 									class="tf-ion-ios-arrow-down"></span></a>
 							<div class="dropdown-menu">
 								<div class="row">
