--- a/views/partials/product_list.hbs
+++ b/views/partials/product_list.hbs
@@ -26,7 +26,7 @@
 				</div>
 			</div>
 			<div class="product-content">
-				<h4><a href="/product/detail">{{this.name}}</a></h4>
+				<h4><a href="/product/{{this.id}}">{{this.name}}</a></h4>
 				<p class="price">{{this.price}} đồng</p>
 			</div>
 		</div>
