--- a/views/product/detail.hbs
+++ b/views/product/detail.hbs
@@ -6,7 +6,7 @@
                 <ol class="breadcrumb">
                     <li><a href="/">Trang chủ</a></li>
                     <li><a href="/product/list">Danh mục sản phẩm</a></li>
-                    <li class="active">{{product_name}}</li>
+                    <li class="active">{{name}}</li>
                 </ol>
             </div>
             <div class="col-md-6">
@@ -28,14 +28,14 @@
                             <div class='carousel-inner '>
 
                                 <div class='item active'>
-                                    <img src='/static/images/shop/single-products/product-{{active_img}}.jpg' alt=''
-                                        data-zoom-image="/static/images/shop/single-products/product-{{active_img}}.jpg" />
+                                    <img src='/static/{{active_img}}' alt=''
+                                        data-zoom-image="/static/{{active_img}}" />
                                 </div>
 
                                 {{#each img}}
                                 <div class='item'>
-                                    <img src='/static/images/shop/single-products/product-{{this}}.jpg' alt=''
-                                        data-zoom-image="/static/images/shop/single-products/product-{{this}}.jpg" />
+                                    <img src='/static/{{this}}' alt=''
+                                        data-zoom-image="/static/{{this}}" />
                                 </div>
                                 {{/each}}
                             </div>
@@ -52,11 +52,11 @@
                         <!-- thumb -->
                         <ol class='carousel-indicators mCustomScrollbar meartlab'>
                             <li data-target='#carousel-custom' data-slide-to='0' class='active'>
-                                <img src='/static/images/shop/single-products/product-{{active_img}}.jpg' alt='' />
+                                <img src='/static/{{active_img}}' alt='' />
                             </li>
                             {{#each img}}
                             <li data-target='#carousel-custom' data-slide-to='1'>
-                                <img src='/static/images/shop/single-products/product-{{this}}.jpg' alt='' />
+                                <img src='/static/{{this}}' alt='' />
                             </li>
                             {{/each}}
                         </ol>
@@ -67,14 +67,16 @@
             {{!-- detail --}}
             <div class="col-md-7">
                 <div class="single-product-details">
-                    <h2>{{product_name}}</h2>
-                    <p class="product-price mb-20">{{product_price}} đồng</p>
+                    <h2>{{name}}</h2>
+                    <p class="product-price mb-20">{{price}} đồng</p>
 
-                    {{{product_description}}}
+                    {{{description}}}
+                    {{#if color}}
+
                     <div class="color-swatches">
                         <span>Màu:</span>
                         <ul>
-                            <li>
+                            {{!-- <li>
                                 <a href="#" class="swatch-violet"></a>
                             </li>
                             <li>
@@ -82,9 +84,16 @@
                             </li>
                             <li>
                                 <a href="#" class="swatch-cream"></a>
-                            </li>
+                            </li> --}}
+                            <select class="form-control">
+                                {{#each color}}
+                                <option>{{this}}</option>
+                                {{/each}}
+                            </select>
+
                         </ul>
                     </div>
+                    {{/if}}
                     <div class="product-size">
                         <span>Kích cỡ:</span>
                         <select class="form-control">
@@ -95,16 +104,21 @@
                         </select>
                     </div>
                     <div class="product-quantity">
+                        <span>Có sẵn:</span> {{quantity}}
+                    </div>
+                    <div class="product-quantity">
                         <span>Số lượng:</span>
                         <div class="product-quantity-slider">
                             <input id="product-quantity" type="text" value="0" name="product-quantity">
                         </div>
                     </div>
+
                     <div class="product-category">
                         <span>Danh mục:</span>
                         <ul>
-                            <li><a href="#">Đầm</a></li>
-                            <li><a href="#">Nữ</a></li>
+                            {{#each categories}}
+                                <li><a href="#">{{this}}</a></li>
+                            {{/each}}
                         </ul>
                     </div>
                     <a href="/checkout/cart" class="btn btn-main mt-20">Thêm vào giỏ</a>
@@ -124,7 +138,7 @@
                     <div class="tab-content patternbg">
                         <div id="details" class="tab-pane fade active in">
                             <h4>Mô tả sản phẩm</h4>
-                            {{{product_description}}}
+                            {{{description}}}
                         </div>
                         <div id="reviews" class="tab-pane fade">
                             <div class="post-comments">
@@ -230,7 +244,7 @@
 
 {{/with}}
 
-<section class="products related-products section">
+{{!-- <section class="products related-products section">
     <div class="container">
         <div class="row">
             <div class="title text-center">
@@ -239,7 +253,7 @@
         </div>
         {{> product_list products=relate}}
     </div>
-</section>
+</section> --}}
 
 
 {{> modal}}
